# FastDoc

./: README.md  burgers.py  main.py  modelos_pydantic.py  pyproject.toml  tipos_python.py  variaveis_ambiente.py
corpo_requisicao/: routers.py
parametros_consulta/: models.py  routers.py
valida_numeros/: routers.py
valida_texto/: router.py
