[tool.poetry]
name = "fastdoc"
version = "0.1.0"
description = ""
authors = ["devisono <devison_santos@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
